clients/python/agentic-sandbox-client/gateway-kind/gateway-kind.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kind-gateway
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
---
# The HTTPRoute to connect the Gateway to the router service.
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: sandbox-router-route
spec:
  parentRefs:
  - name: kind-gateway # This must match the name of the Gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sandbox-router-svc # Route all traffic to the router service
      port: 8080
